[Fixes #61503376, Fixes #61520930] - Small Gap Between Header And Profile Banner Of Profile View / Forgot To Pass Parameter To Exception In Profile View
fixed css for header spacing to remove small gap.
logger.exception calls in EstablishmentProfileView now get passed a message.

--- a/web/knotis/contrib/layout/static/knotis/layout/css/header.css
+++ b/web/knotis/contrib/layout/static/knotis/layout/css/header.css
@@ -17,7 +17,7 @@ div.navbar.navbar-fluid-top.knotis-header {
 }
 
 div.knotis-header-spacing {
-    height: 64px;
+    height: 62px;
 }
 
 div.navbar.navbar-fluid-top .navbar-inner .container-fluid .search-bar,
